fixed scrollbar issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2702,7 +2702,6 @@ input, select, textarea {
 		justify-content: space-between;
 		background: #c44930;
 		color: #ffcac0;
-		height: 100%;
 		overflow-y: auto;
 		position: fixed;
 		text-align: center;
